tests/ui/frontmatter/fence-indented-mismatch.stderr
error: invalid preceding whitespace for frontmatter close
  --> $DIR/fence-indented-mismatch.rs:6:1
   |
LL |     ---x
   | ^^^^^^^^
   |
note: frontmatter close should not be preceded by whitespace
  --> $DIR/fence-indented-mismatch.rs:6:1
   |
LL |     ---x
   | ^^^^

error: extra characters after frontmatter close are not allowed
  --> $DIR/fence-indented-mismatch.rs:6:1
   |
LL |     ---x
   | ^^^^^^^^

error: unexpected closing delimiter: `}`
  --> $DIR/fence-indented-mismatch.rs:9:1
   |
LL | }
   | ^ unexpected closing delimiter

error: aborting due to 3 previous errors

